mern-stack/.infra/k8s/components/services/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mern-services
spec:
  type: ClusterIP
  selector:
    app: mern-services
  ports:
  - name: gateway-service
    port: 8080
    targetPort: 8080
  - name: user-service
    port: 8081
    targetPort: 8081
  - name: survey-service
    port: 8082
    targetPort: 8082
  - name: react-app
    port: 3000
    targetPort: 3000
