mern-stack/.infra/k8s/components/services/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-services-react
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: updated_by_customize
    external-dns.alpha.kubernetes.io/hostname: updated_by_customize
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-services
                port: 
                  name: react-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-services-gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/subnets: updated_by_customize
    external-dns.alpha.kubernetes.io/hostname: updated_by_customize
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mern-services
                port: 
                  name: gateway-service
